--- a/index.html
+++ b/index.html
@@ -269,5 +269,6 @@
           </div>
           </div>
         </footer>
+                  <h2 class="author">Designed and Developed with 🤍 by Vikram</h2>
         </body>
 </html>
